# sonarwhale

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  build.gradle.kts  gradle.properties  index.html  proguard.pro  settings.gradle.kts  todo.md
.claude/: claude.md
.github/workflows/: ci.yml  release.yml
Routex/: build.gradle.kts
Routex/.claude/: claude.md
Routex/.claude/agents/: jetbrains-plugin-expert.md
Sonarwhale/: README.md  build.gradle.kts  todo.md
_astro/: NavbarIsland.BUwoDNyn.js  NavbarIsland.Cz-gtH_-.js  design-system.Bj08Hj3O.js  design-system.CwM0_fJL.js  index.B7HFT7ku.css  index.B97ubsvM.css
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/resources/: sw-runner.js
testprojects/: .gitignore  PLAN.md  README.md
testprojects/csharp/SonarwhaleTestApi/: Program.cs  SonarwhaleTestApi.csproj  SonarwhaleTestApi.http
testprojects/java/sonarwhale-test-api/: pom.xml
testprojects/python/fastapi-test/: main.py  pyproject.toml  requirements.txt  security.py
testprojects/python/fastapi-test/.sonarwhale/scripts/: sw.d.ts
testprojects/python/fastapi-test/.sonarwhale/scripts/Admin/: pre.js
testprojects/python/fastapi-test/.sonarwhale/scripts/Admin/GET__api_admin_stats/: pre.js
testprojects/python/fastapi-test/.sonarwhale/scripts/Orders/: pre.js
testprojects/python/fastapi-test/.sonarwhale/scripts/Users/: post.js  pre.js
testprojects/python/fastapi-test/models/: models.py
testprojects/python/fastapi-test/routers/: admin.py  auth.py  orders.py  products.py  users.py
(+211 files in other folders)
